--- a/ACL4SSR_Online_banana.ini
+++ b/ACL4SSR_Online_banana.ini
@@ -59,7 +59,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇺🇲 美国固定`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]📶 官方优选`[]☑️ 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇺🇲 美国固定`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]☑️ 手动切换`[]DIRECT
 custom_proxy_group=☑️ 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`http://www.gstatic.com/generate_204`300,,350
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国节点`[]🇺🇲 美国固定`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]☑️ 手动切换`[]DIRECT
@@ -98,4 +98,5 @@ overwrite_original_rules=true
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
+
 
